vault/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  selector:
    app: vault
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: vault.example.com
      http:
        paths:
          - pathType: /
            backend:
              serviceName: vault
              servicePort: 8200
